# libfstpp

./: LICENSE  README.md  run_coverage.sh  run_regression.sh
.github/workflows/: cmake-build.yml  regression.yml
src/: CMakeLists.txt
src/bench1/fixed/: VRSA_tb__ConstPool_0.cpp  VRSA_tb__Syms.h  VRSA_tb__Trace__0__Slow.cpp  VRSA_tb___024root.h  VRSA_tb___024root__DepSet_h1a0cdfd7__0.cpp  VRSA_tb___024root__DepSet_h1a0cdfd7__0__Slow.cpp  VRSA_tb___024root__DepSet_h62ddea90__0.cpp  VRSA_tb___024unit__DepSet_h8aefc8e5__0__Slow.cpp  VRSA_tb___024unit__Slow.cpp
src/bench2/: testbench.cc
src/bench2/fixed/: Vpicorv32_wrapper.cpp  Vpicorv32_wrapper.h  Vpicorv32_wrapper__TraceDecls__0__Slow.cpp  Vpicorv32_wrapper__Trace__0.cpp  Vpicorv32_wrapper__Trace__0__Slow.cpp  Vpicorv32_wrapper___024root__DepSet_h3139ae09__0.cpp  Vpicorv32_wrapper___024root__DepSet_h8446a20b__0__Slow.cpp  Vpicorv32_wrapper__pch.h  Vpicorv32_wrapper_axi4_memory__DepSet_h1d476bdb__0.cpp  Vpicorv32_wrapper_picorv32_wrapper__DepSet_haddc77af__0.cpp  Vpicorv32_wrapper_picorv32_wrapper__Slow.cpp  verilated_config.h
src/benchmark/list/RSA256/: rsa256_tb.cpp
src/benchmark/list/bench1/: rsa256_tb.cpp
src/benchmark/list/bench1/fixed/: VRSA_tb__Syms.cpp  VRSA_tb__Trace__0.cpp  VRSA_tb___024root__DepSet_h62ddea90__0__Slow.cpp  VRSA_tb___024root__Slow.cpp
src/benchmark/list/bench2/: Makefile  testbench.cpp
src/benchmark/list/bench2/firmware/: firmware.hex
src/benchmark/list/bench2/fixed/: Vpicorv32_wrapper__ConstPool_0.cpp  Vpicorv32_wrapper__Syms.cpp  Vpicorv32_wrapper__Syms.h  Vpicorv32_wrapper__Trace__0.cpp  Vpicorv32_wrapper___024root.h  Vpicorv32_wrapper___024root__0__Slow.cpp  Vpicorv32_wrapper___024root__DepSet_h3139ae09__0__Slow.cpp  Vpicorv32_wrapper___024root__DepSet_h8446a20b__0.cpp  Vpicorv32_wrapper___024root__Slow.cpp  Vpicorv32_wrapper_axi4_memory__0.cpp  Vpicorv32_wrapper_axi4_memory__DepSet_h1d476bdb__0__Slow.cpp  Vpicorv32_wrapper_axi4_memory__DepSet_h9e3ae459__0.cpp  Vpicorv32_wrapper_axi4_memory__Slow.cpp  Vpicorv32_wrapper_picorv32_wrapper.h  Vpicorv32_wrapper_picorv32_wrapper__DepSet_haddc77af__0__Slow.cpp  Vpicorv32_wrapper_picorv32_wrapper__DepSet_hf129db65__0__Slow.cpp  Vpicorv32_wrapper_picorv32_wrapper__Slow.cpp
src/benchmark/list/picorv32/: testbench.cpp
src/benchmark/list/picorv32/fixed/: Vpicorv32_wrapper__ConstPool_0.cpp  Vpicorv32_wrapper__Dpi.h  Vpicorv32_wrapper__Trace__0__Slow.cpp  Vpicorv32_wrapper___024root.h  Vpicorv32_wrapper___024root__0.cpp  Vpicorv32_wrapper_axi4_memory.h  Vpicorv32_wrapper_axi4_memory__0__Slow.cpp  Vpicorv32_wrapper_picorv32_wrapper__0.cpp  Vpicorv32_wrapper_picorv32_wrapper__0__Slow.cpp
src/benchmark/list/simple/: Simple.sv  Simple_tb.cpp
src/benchmark/list/simple/fixed/: VSimple__Syms.cpp  VSimple__Syms.h  VSimple__Trace__0.cpp  VSimple__Trace__0__Slow.cpp  VSimple___024root.h  VSimple___024root__0.cpp  VSimple___024root__DepSet_h04834800__0.cpp  VSimple___024root__DepSet_h4dc4de73__0.cpp  VSimple___024root__DepSet_h4dc4de73__0__Slow.cpp
src/benchmark/verilatorshare/: verilated.h  verilated_fst_c.cpp
src/fixed/: verilated_fst_c.cpp
src/fstapi/fstcpp/: StreamWriteHelper.hpp  VariableInfo.test.cpp  Writer.cpp  Writer.hpp  Writer.test.cpp  Writer_EasyBlocks.test.cpp  Writer_Emit.test.cpp  Writer_ValueChangeBlock.test.cpp  assertion.h  fst.hpp  fst_file.hpp  fstapi.cpp
src/fstcpp/: StreamWriteHelper.h  StreamWriteHelper.hpp  VariableInfo.cpp  VariableInfo.h  VariableInfo.test.cpp  Writer.cpp  Writer.h  Writer.hpp  Writer_EasyBlocks.test.cpp  Writer_ValueChangeBlock.test.cpp  assertion.h  fst.h  fst.hpp  fst_file.h  fst_file.hpp  fst_string_view.h  fst_string_view.hpp  fstcpp.h  fstcpp_assertion.h  fstcpp_file.h  fstcpp_stream_write_helper.h  fstcpp_variable_info.cpp  fstcpp_variable_info.h  fstcpp_variable_info.test.cpp  fstcpp_writer.cpp  fstcpp_writer.h  fstcpp_writer_easy_blocks.test.cpp  fstcpp_writer_value_change_block.test.cpp  string_view.h  string_view.hpp
src/gtkwave/: fstapi.cpp
src/integration_test/: Simple.sv  Simple_tb.test.cpp
src/simple/: Simple_tb.cpp
src/simple/fixed/: VSimple__Syms.cpp  VSimple__TraceDecls__0__Slow.cpp  VSimple___024root.h  VSimple___024root__DepSet_h04834800__0.cpp  VSimple___024root__DepSet_h4dc4de73__0.cpp  VSimple___024root__DepSet_h4dc4de73__0__Slow.cpp  VSimple___024root__Slow.cpp
src/test/: Writer_test.cpp
